feat: add object active and deleted endpoints
